Fix Scheduler visibility in compact theme (T627090)

--- a/styles/widgets/generic/scheduler.generic.less
+++ b/styles/widgets/generic/scheduler.generic.less
@@ -530,6 +530,7 @@
 
     .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);
 
+ 
     &.dx-scheduler-work-space-day {
         .dx-scheduler-header-scrollable-mixin(0);
     }
@@ -537,30 +538,41 @@
     &.dx-scheduler-work-space.dx-scheduler-work-space-all-day {
         .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_ALL_DAY_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);
 
-        &.dx-scheduler-work-space-all-day-collapsed {
-            .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_COLLAPSED_ALL_DAY_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);
+         &.dx-scheduler-work-space-vertical-grouped {
+            .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);
         }
 
-        &.dx-scheduler-work-space-day {
-            &:not(.dx-scheduler-work-space-count) {
-                .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_ALL_DAY_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);
-
-                &.dx-scheduler-work-space-all-day-collapsed {
-                    .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_COLLAPSED_ALL_DAY_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);
-                }
+        &:not(.dx-scheduler-work-space-vertical-grouped) {
+            &.dx-scheduler-work-space-all-day-collapsed {
+                .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_COLLAPSED_ALL_DAY_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);
             }
 
-            &:not(.dx-scheduler-work-space-grouped) {
-                .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_ALL_DAY_TABLE_CELL_HEIGHT);
+            &.dx-scheduler-work-space-day {
+                &:not(.dx-scheduler-work-space-count) {
+                    .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_ALL_DAY_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);
 
-                &.dx-scheduler-work-space-all-day-collapsed {
-                    .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_COLLAPSED_ALL_DAY_TABLE_CELL_HEIGHT);
+                    &.dx-scheduler-work-space-all-day-collapsed {
+                        .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_COLLAPSED_ALL_DAY_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);
+                    }
+                }
+
+                &:not(.dx-scheduler-work-space-grouped) {
+                    .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_ALL_DAY_TABLE_CELL_HEIGHT);
+
+                    &.dx-scheduler-work-space-all-day-collapsed {
+                        .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_COLLAPSED_ALL_DAY_TABLE_CELL_HEIGHT);
+                    }
                 }
             }
         }
+    
     }
 
     &.dx-scheduler-work-space.dx-scheduler-work-space-month {
+        .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);
+    }
+
+    &.dx-scheduler-work-space-vertical-grouped {
         .dx-scheduler-header-scrollable-mixin(@GENERIC_SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT + @GENERIC_SCHEDULER_HEADER_PANEL_TOP_GAP);
     }
 }
